large changes in beta-series-correlation notebooks

--- a/connectivity_analysis/bsc/dn_bs_02_betamaps_exploration.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_02_betamaps_exploration.ipynb
@@ -30,6 +30,7 @@
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "import nibabel as nib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -104,6 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.rcParams[\"font.size\"] = 13\n",
+    "\n",
     "for con_idx, con in enumerate(meta[\"dim2\"]):\n",
     "    for sub_idx, sub in enumerate(meta[\"dim1\"]):\n",
     "        con_name = f\"prl{con}\"\n",
@@ -146,10 +149,14 @@
     "        ax24 = fig.add_subplot(gs[2, 3])\n",
     "\n",
     "        # FD timecourse\n",
+    "        if con_name == \"prlrew\":\n",
+    "            con_fullname = \"Reward-seeking\" \n",
+    "        else:\n",
+    "            con_fullname = \"Punishment-avoiding\"\n",
     "        ax0.plot(df_conf[\"framewise_displacement\"], label=\"FD\", color=\"#999999\")\n",
     "        ax0.set_xlim(min(df_conf.index), max(df_conf.index))\n",
     "        ax0.set_xlabel(\"seconds\")\n",
-    "        ax0.set_title(f\"Subject: {sub} / Condition: {con_name}\", fontSize=15)\n",
+    "        ax0.set_title(f\"Subject: {sub} / Condition: {con_fullname}\", fontSize=15)\n",
     "\n",
     "        divider = make_axes_locatable(ax0)\n",
     "        ax = divider.append_axes(\"right\", size=\"5%\", pad=0.05)\n",
@@ -183,8 +190,8 @@
     "        )\n",
     "        ax21.set_title(\"+PE trials\")\n",
     "        ax22.set_title(\"-PE trials\")\n",
-    "        ax21.annotate(f\"z = {z_mni}\", (3, 5))\n",
-    "        ax22.annotate(f\"z = {z_mni}\", (3, 5))\n",
+    "        ax21.annotate(f\"z = {z_mni}\", (3, 6))\n",
+    "        ax22.annotate(f\"z = {z_mni}\", (3, 6))\n",
     "        aligned_imshow_cbar(ax21, im21)\n",
     "        aligned_imshow_cbar(ax22, im22)\n",
     "\n",
@@ -196,9 +203,9 @@
     "        ax23.set_xlabel(r\"$\\beta$ values\")\n",
     "        ax24.set_xlabel(r\"$\\beta$ values\")\n",
     "        \n",
-    "        plt.tight_layout()\n",
+    "        plt.tight_layout(pad=0)\n",
     "\n",
-    "        fig_fname = f\"sub-{sub}_task-{con_name}_betamap_carpetplot.png\"\n",
+    "        fig_fname = f\"sub-{sub}_task-{con_name}_betamap_carpetplot.pdf\"\n",
     "        fig.savefig(join(path_betamaps_figures, fig_fname))\n",
     "        plt.close(fig)"
    ]
