--- a/connectivity_analysis/bsc/dn_bs_03_betaseries_extraction.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_03_betaseries_extraction.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = \"combined_roi\"\n",
-    "roi_table_fname = \"combined_roi_table.csv\"\n",
+    "atlas = \"combined_roi_4and5\"\n",
+    "roi_table_fname = \"combined_roi_4and5_table.csv\"\n",
     "\n",
     "# Arguments for NiftiSpheresMasker\n",
     "masker_kwargs = {\n",
-    "    \"allow_overlap\": False, \n",
+    "    \"allow_overlap\": True, \n",
     "    \"standardize\": True, \n",
     "    \"detrend\": False, \n",
     "    \"high_pass\": None,\n",
@@ -79,9 +79,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>netCode</th>\n",
+       "      <th>netColor</th>\n",
+       "      <th>netName</th>\n",
+       "      <th>radius(mm)</th>\n",
+       "      <th>origNetName</th>\n",
+       "      <th>strategy</th>\n",
+       "      <th>origName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>-66</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-72</td>\n",
+       "      <td>24</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>43</td>\n",
+       "      <td>-78</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-47</td>\n",
+       "      <td>-76</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-14</td>\n",
+       "      <td>-91</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>5</td>\n",
+       "      <td>visual</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    x   y   z  netCode netColor netName  radius(mm) origNetName strategy  \\\n",
+       "0  42 -66  -8      7.0     Blue  visual           5      visual      NaN   \n",
+       "1   6 -72  24      7.0     Blue  visual           5      visual      NaN   \n",
+       "2  43 -78 -12      7.0     Blue  visual           5      visual      NaN   \n",
+       "3 -47 -76 -10      7.0     Blue  visual           5      visual      NaN   \n",
+       "4 -14 -91  31      7.0     Blue  visual           5      visual      NaN   \n",
+       "\n",
+       "  origName  \n",
+       "0      NaN  \n",
+       "1      NaN  \n",
+       "2      NaN  \n",
+       "3      NaN  \n",
+       "4      NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create paths\n",
     "path_betamaps = join(path[\"bsc\"], \"betamaps\")\n",
@@ -124,9 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping normalization...\n"
+     ]
+    }
+   ],
    "source": [
     "if within_condition_normalization:\n",
     "    print(\"Normalizing images...\")\n",
@@ -183,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +341,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "666b70dc90c14728b461308e7e8d83f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "betaseries_aggregated = np.zeros((n_subjects, n_conditions, n_trials, n_rois))\n",
     "\n",
