--- a/connectivity_analysis/bsc/dn_bs_04_betaseries_correlation.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_04_betaseries_correlation.ipynb
@@ -41,7 +41,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from dn_utils.behavioral_models import load_behavioral_data\n",
-    "from dn_utils.networks import zscore_network\n",
+    "from dn_utils.networks import zscore_matrix\n",
     "from dn_utils.path import path"
    ]
   },
@@ -58,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = \"combined_roi\"\n",
-    "roi_table_fname = \"combined_roi_table.csv\""
+    "atlas = \"combined_roi_4and5\"\n",
+    "roi_table_fname = \"combined_roi_4and5_table.csv\""
    ]
   },
   {
@@ -396,7 +396,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code/dn_utils/networks.py:7: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code/dn_utils/networks.py:37: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  new_arr = .5 * np.log((1 + arr) / (1 - arr))\n"
      ]
     },
@@ -435,8 +435,8 @@
     "                                                    ~won_bool][:, included_roi]\n",
     "        \n",
     "        # Calculate correlation matrices & z-score them\n",
-    "        corrmat_perr_pos = zscore_network(np.corrcoef(betaseries_perr_pos.T))\n",
-    "        corrmat_perr_neg = zscore_network(np.corrcoef(betaseries_perr_neg.T))\n",
+    "        corrmat_perr_pos = zscore_matrix(np.corrcoef(betaseries_perr_pos.T))\n",
+    "        corrmat_perr_neg = zscore_matrix(np.corrcoef(betaseries_perr_neg.T))\n",
     "\n",
     "        corrmats_aggregated[sub_idx, con_idx, 0] = corrmat_perr_pos\n",
     "        corrmats_aggregated[sub_idx, con_idx, 1] = corrmat_perr_neg\n",
