--- a/connectivity_analysis/bsc/dn_bs_06_graph_measures_unthr.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_06_graph_measures_unthr.ipynb
@@ -23,7 +23,8 @@
     "├── unthr\n",
     "│   ├── gamma_<louvain_gamma_value>\n",
     "│   │   ├── m_aggregated.npy\n",
-    "│   │   ├── p_aggregated.npy\n",
+    "│   │   ├── ppos_aggregated.npy\n",
+    "│   │   ├── pneg_aggregated.npy\n",
     "│   │   ├── q_aggregated.npy\n",
     "│   │   └── z_aggregated.npy\n",
     "...\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from bct.algorithms.centrality import module_degree_zscore, participation_coef\n",
+    "from bct.algorithms.centrality import module_degree_zscore, participation_coef_sign\n",
     "from bct.algorithms.modularity import community_louvain\n",
     "from dn_utils.path import path\n",
     "from tqdm.notebook import tqdm"
@@ -59,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = \"combined_roi\"\n",
+    "atlas = \"combined_roi_4and5\"\n",
     "\n",
     "# Modularity\n",
     "louvain_B = \"negative_asym\"\n",
-    "louvain_reps = 1_00\n",
-    "gamma_range = np.arange(0.5, 3.5, 0.25)\n",
+    "louvain_reps = 1_000\n",
+    "gamma_range = np.arange(0.5, 2.5, 0.5)\n",
     "\n",
     "# Create output paths\n",
     "path_corrmats = join(path[\"bsc\"], \"corrmats\")\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,9 +119,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating graph measures for 𝛾 = 0.5\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f93b5f3e0a7c40d5a252154d92b92d7e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/128 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/miniconda3/envs/decidenet/lib/python3.8/site-packages/bct/algorithms/centrality.py:661: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  Z[np.where(ci == i)] = (Koi - np.mean(Koi)) / np.std(Koi)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating graph measures for 𝛾 = 1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28758d3590a14136903089c0a57de254",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/128 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating graph measures for 𝛾 = 1.5\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a710a8abb4a4d3fb02d6413c18bc113",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/128 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating graph measures for 𝛾 = 2.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "030135226b7a4012936370088c7723b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/128 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "for gamma in gamma_range:\n",
     "    \n",
@@ -133,7 +227,8 @@
     "    m_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign, n_roi))\n",
     "    q_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign))\n",
     "    z_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign, n_roi))\n",
-    "    p_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign, n_roi))\n",
+    "    ppos_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign, n_roi))\n",
+    "    pneg_aggregated = np.zeros((n_subjects, n_conditions, n_perr_sign, n_roi))\n",
     "\n",
     "    iters = product(range(n_subjects), range(n_conditions), range(n_perr_sign))\n",
     "    for sub_idx, con_idx, perr_sign_idx in tqdm(list(iters)):\n",
@@ -153,8 +248,9 @@
     "            W=corrmat, ci=best_m, flag=0)\n",
     "\n",
     "        # Participation coefficient\n",
-    "        p_aggregated[sub_idx, con_idx, perr_sign_idx] = participation_coef(\n",
-    "            W=corrmat, ci=best_m, degree=\"undirected\")\n",
+    "        ppos, pneg = participation_coef_sign(W=corrmat, ci=best_m)\n",
+    "        ppos_aggregated[sub_idx, con_idx, perr_sign_idx] = ppos\n",
+    "        pneg_aggregated[sub_idx, con_idx, perr_sign_idx] = pneg\n",
     "\n",
     "        # Store best values\n",
     "        m_aggregated[sub_idx, con_idx, perr_sign_idx] = best_m\n",
@@ -164,7 +260,8 @@
     "    np.save(join(path_corrmats_unthr_gamma, f\"m_aggregated.npy\"), m_aggregated)\n",
     "    np.save(join(path_corrmats_unthr_gamma, f\"q_aggregated.npy\"), q_aggregated)\n",
     "    np.save(join(path_corrmats_unthr_gamma, f\"z_aggregated.npy\"), z_aggregated)\n",
-    "    np.save(join(path_corrmats_unthr_gamma, f\"p_aggregated.npy\"), p_aggregated)"
+    "    np.save(join(path_corrmats_unthr_gamma, f\"ppos_aggregated.npy\"), ppos_aggregated)    \n",
+    "    np.save(join(path_corrmats_unthr_gamma, f\"pneg_aggregated.npy\"), pneg_aggregated)"
    ]
   }
  ],
