--- a/connectivity_analysis/bsc/dn_bs_08_consensus_calculation.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_08_consensus_calculation.ipynb
@@ -2,16 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "distinct-husband",
+   "id": "excellent-passion",
    "metadata": {},
    "source": [
-    "# Calculate consensus partitions"
+    "# Consensus partitions calculation\n",
+    "\n",
+    "Here representative module partitions are calculated for entire task and condition classes. First, agreement matrix $D$ between all partitions of interest is calculated. An element of agreement matrix $D_{ij}$ represents the number of times that nodes $i$ and $j$ are placed within the same module. Then, agreement matrix $D$ is normalized to reflect the probability that two nodes are a part of the same community (given random partition). Normalized agreemnent matrix is then thresholded at $\\tau$ level, equal to `consensus_tau` (here 0.5), to remove weak associations. Resulting matrix is then reclustered using Louvain algorithm `consensus_reps` times. Analysis results in five representative partitions: \n",
+    "- `all`: entire task partition\n",
+    "- `rew`: reward-seeking condition parition\n",
+    "- `pun`: punishment-avoiding condition partition\n",
+    "- `inc`: increasing (positive) prediciton error partition\n",
+    "- `dec`: decreasing (negative) prediction error partition\n",
+    "\n",
+    "Partitions are stored under `consensus_tau_<consensus_tau>.json` file within:\n",
+    "```\n",
+    "└── <atlas_name>\n",
+    "    └── <threshold>\n",
+    "        ├── gamma_<louvain_gamma>\n",
+    "        │   ├── consensus_tau_0_5.json\n",
+    "        │   ├── consensus_tau_0_75.json\n",
+    "        │   └── ...\n",
+    "```\n",
+    "Output JSON file contains keys representing different partition classes and values corresponding to partition vector. It also contains other metadata like `consensus_tau` and `consensus_reps` values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "veterinary-cutting",
+   "id": "first-family",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "solid-ethics",
+   "execution_count": 6,
+   "id": "british-nutrition",
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = \"combined_roi\"\n",
-    "gamma_range = np.arange(0.25, 0.5, 0.5)\n",
+    "atlas = \"combined_roi_4and5\"\n",
+    "gamma_range = np.arange(0.5, 2, 0.5)\n",
     "\n",
     "consensus_tau = 0.5\n",
     "consensus_reps = 1_000"
@@ -41,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "removable-minority",
+   "execution_count": 7,
+   "id": "ruled-finger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,21 +91,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "straight-torture",
+   "execution_count": 53,
+   "id": "average-jungle",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "γ = 0.25\n"
+      "γ = 0.5\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e9e99afdca2414081c99124b02e449a",
+       "model_id": "ce869b1dc4284fbe8a1e3fccd3cea920",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "γ = 1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d86825d6d6064637b26b3251c0856ce7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "γ = 1.5\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5aa0114218e94ed19729a029face0cf1",
        "version_major": 2,
        "version_minor": 0
       },
